# foreach

./: README.md  pyproject.toml
foreach/: scanner.py  server.py  task_manager.py
