[project]
name = "foreach"
version = "0.1.0"
description = "This is a mcp tool for agent to process a bunch of files in a directory"
authors = [
	{ name = "Driftcell", email = "driftcell@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"mcp[cli]>=1.13.0",
	"pathspec>=0.12.0",
]
license = { text = "MIT" }
keywords = ["mcp", "model context protocol", "batch", "foreach", "automation"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Environment :: Console",
	"Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/<you>/foreach"
Repository = "https://github.com/<you>/foreach"
Issues = "https://github.com/<you>/foreach/issues"

[project.scripts]
foreach = "foreach.server:main"

[tool.uv]
package = true
